openshift/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    deployment.kubernetes.io/revision: '1'
    openshift.io/generated-by: OpenShiftWebConsole
  name: proxy-rest
  namespace: telefonica-amq-streams-dev
  labels:
    app: proxy-rest
    app.kubernetes.io/component: proxy-rest
    app.kubernetes.io/instance: proxy-rest
    app.kubernetes.io/name: proxy-rest
    app.openshift.io/runtime-namespace: telefonica-amq-streams-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-rest
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: proxy-rest
        deploymentconfig: proxy-rest
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: proxy-rest
          image: quay.apps.mgmt.telcostack.br.telefonica.com/redhat/proxy-rest:0.0.2
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
