openshift/service.yml
kind: Service
apiVersion: v1
metadata:
  name: proxy-rest
  namespace: telefonica-amq-streams-dev
  labels:
    app: proxy-rest
    app.kubernetes.io/component: proxy-rest
    app.kubernetes.io/instance: proxy-rest
    app.kubernetes.io/name: proxy-rest
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: proxy-rest
    deploymentconfig: proxy-rest
status:
  loadBalancer: {}
